--- a/_posts/2015-01-01-hello.md
+++ b/_posts/2015-01-01-hello.md
@@ -1,56 +1,13 @@
 ---
 layout: post
-title: Hello, Jekyll and TtskchTheme
-tags: hello jekyll theme
-eye_catch: http://jekyllrb.com/img/logo-2x.png
+title: Christopher Bennett
+tags: christopherbennett
+eye_catch: https://avatars0.githubusercontent.com/u/28678667?s=460&v=4
 ---
 
-You can use most of standard Markdown features.
+Dr. Bennett is a post-doctoral researcher in the Kim Lab at UTSW maintaining and adding to HISAT-genotype.
 
-## List
+[Linkedin](https://www.linkedin.com/in/christopher-bennett-336489aa)
 
-* foo
-* bar
-    * indentation
-        * nesting indentation
-    * indentation
-* buz
 
-<!--more-->
 
-## Quote
-
-> quote
->
-> > nesting quote
->
-> quote
-
-## Strikethrough
-
-~~Mistaken text.~~
-
-## Syntax highlighting
-
-```php
-<?php
-echo 'Hello, World!';
-```
-
-## Tables
-
-First Header  | Second Header
-------------- | -------------
-Content Cell  | Content Cell
-Content Cell  | Content Cell
-
-## Emoji
-
-You can use GitHub flavored emoji :+1:
-
-> **Note**  
-> It's not a very good idea to use emoji before `<!--more-->` because jekyll can't render emoji in the excerpted content.
-
-## See also
-
-[Markdown](http://daringfireball.net/projects/markdown/syntax)
